CORS-2075: added new LE saga class